hphp/hack/test/typecheck/constraints/constraint_override_bad.php.exp
File "constraint_override_bad.php", line 10, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "constraint_override_bad.php", line 10, characters 19-21:
  Method `foo` has type `(function<T super B>(): T)` in `C`
  File "constraint_override_bad.php", line 5, characters 19-21:
  But is has type `(function<T super C>(): T)` in parent `B`
  File "constraint_override_bad.php", line 10, characters 19-21:
  Type `(function<T super B>(): T)` is not a subtype of `(function<T super C>(): T)`
  File "constraint_override_bad.php", line 10, characters 23-23:
  `T` is a constrained type parameter
  File "constraint_override_bad.php", line 10, characters 31-31:
  This type constraint is violated
  File "constraint_override_bad.php", line 5, characters 37-37:
  Expected `T`
  File "constraint_override_bad.php", line 10, characters 31-31:
  But got `B`
